--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
@@ -1,6 +1,7 @@
 <!-- TOC -->
 
 - [1. Hello World](#1-hello-world)
+- [2. 命令行参数](#2-命令行参数)
 
 <!-- /TOC -->
 # 1. Hello World
@@ -28,4 +29,5 @@ func main() {
     * s[i] 访问单个元素
     * s[m:n]访问连续元素，包含第一个元素，不包含最后一个元素
     * len(s) 获取数组长度
+
     
