--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/1. go 入门.md
@@ -1,7 +1,10 @@
 <!-- TOC -->
 
 - [1. Hello World](#1-hello-world)
-- [2. 命令行参数](#2-命令行参数)
+- [2. 命令行参数 os.Args](#2-命令行参数-osargs)
+    - [2.1 for 循环](#21-for-循环)
+    - [2.1.1 for 在字符串和slice数据上迭代循环](#211-for-在字符串和slice数据上迭代循环)
+    - [2.2 变量声明和初始化](#22-变量声明和初始化)
 
 <!-- /TOC -->
 # 1. Hello World
@@ -21,7 +24,7 @@ func main() {
         * "{" 必须要和func同一行
         * x+y 换行符可以在+操作符后面，但是不能在前面
 
-# 2. 命令行参数
+# 2. 命令行参数 os.Args
 计算的大致过程，输入、计算、输出。go 是如何输入数据呢？
 * 输入方式有文件、网络、其它程序、键盘、命令行。
 * os 包提供了一些函数和变量，os.Args 用来访问程序的命令行参数
@@ -29,5 +32,64 @@ func main() {
     * s[i] 访问单个元素
     * s[m:n]访问连续元素，包含第一个元素，不包含最后一个元素
     * len(s) 获取数组长度
+* i++ 等价于i=i+1
+    和C语言不一样j=i++是非法的,并且只支持后缀，++i非法
+```
+package main
 
+import (
+	"fmt"
+	"os"
+)
+
+func main() {
+	var res string
+	for i := 0; i < len(os.Args); i++ {
+		res += os.Args[i]
+	}
+	fmt.Println(res)
+}
+```
+
+## 2.1 for 循环
+
+* for 循环标准格式
+    * 三个组成部分两边不用小括号
+    * 左大括号必须要和post同一行
+```
+for initialization;condition;post{
+
+}
+```
+
+* 三个组成部分都可以省略
+    * 省略initialization，post就是一个传统的while循环
+    ```
+    for condition{
+
+    }
+    ```
+    * 如果三部分都被省略，就是一个无线循环
+    ```
+    for{
+        
+    }
+    ```
+## 2.1.1 for 在字符串和slice数据上迭代循环
+* 空标识符：空标识符可以用在任何语法需要，但是逻辑上不需要的地方
+
+```
+for _, tem := range os.Args[1:] {
+		res = res + " " + tem
+	}
+```
     
+
+## 2.2 变量声明和初始化
+变相声明和初始化有下面四种方式
+```
+s:=""
+var s string
+var s=""
+var 
+```
