--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -8,5 +8,12 @@
 * 区分大小写
 * 以下是不允许变量出现的变量名称
     * golang 中自带的25个关键字
+        * fallthrough 使用在case语句，直接执行下一条不判断expr表达式
+    ![2019-11-05-09-35-01.png](./images/2019-11-05-09-35-01.png)
+    * golang 预先声明的常量、类型、函数
+        * iota 计数const出现个数，只能用来赋值 https://www.jianshu.com/p/08d6a4216e96
+        * uintptr:该类型的指针可以用来计算
+        * rune: int32 别名
+    ![2019-11-05-09-38-45.png](./images/2019-11-05-09-38-45.png)
     
     
