--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -15,6 +15,7 @@
         * uintptr:该类型的指针可以用来计算
         * rune: int32 别名
         * cap: 计算分配空间的容量（比如slice，len和CAP区别）
+        * imag: 复数的虚数。imag和real、complex是用来操作复数的
     ![2019-11-05-09-38-45.png](./images/2019-11-05-09-38-45.png)
     
     
