--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -1,6 +1,9 @@
 <!-- TOC -->
 
 - [1. 名称](#1-名称)
+- [2. 声明](#2-声明)
+    - [2.1 声明的通用形式](#21-声明的通用形式)
+    - [2.2 段变量声明](#22-段变量声明)
 
 <!-- /TOC -->
 
@@ -18,5 +21,15 @@
         * imag: 复数的虚数。imag和real、complex是用来操作复数的
         * panic、recover：出错处理机制
     ![2019-11-05-09-38-45.png](./images/2019-11-05-09-38-45.png)
+
+# 2. 声明
+## 2.1 声明的通用形式
+```
+var name type = value
+```
+* 类型和变量值可以省略一个
+* 包级别初始化在main开始之前进行，局部变量的声明和初始化在函数执行期间执行
+
+## 2.2 段变量声明
     
     
