--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -3,7 +3,7 @@
 - [1. 名称](#1-名称)
 - [2. 声明](#2-声明)
     - [2.1 声明的通用形式](#21-声明的通用形式)
-    - [2.2 段变量声明](#22-段变量声明)
+    - [2.2 短变量声明](#22-短变量声明)
 
 <!-- /TOC -->
 
@@ -29,7 +29,21 @@ var name type = value
 ```
 * 类型和变量值可以省略一个
 * 包级别初始化在main开始之前进行，局部变量的声明和初始化在函数执行期间执行
+* var 声明的使用场景
+    * 声明类型和value类型不一致情况
+        ```
+        var myValue float64 = 100
+        ```
+    * 赋值的value对声明的变量不重要情况
+        ```
+        var myValue float64
+        ```
 
-## 2.2 段变量声明
+## 2.2 短变量声明
+```
+name:=value
+```
+
+
     
     
