--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -4,6 +4,7 @@
 - [2. 声明](#2-声明)
     - [2.1 声明的通用形式](#21-声明的通用形式)
     - [2.2 短变量声明](#22-短变量声明)
+    - [2.3 指针](#23-指针)
 
 <!-- /TOC -->
 
@@ -43,6 +44,10 @@ var name type = value
 ```
 name:=value
 ```
+* 短声明变量不需要声明左边所有的变量，但是至少要声明一个变量，其余变量作为赋值使用
+
+## 2.3 指针
+
 
 
     
