--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -47,6 +47,9 @@ name:=value
 * 短声明变量不需要声明左边所有的变量，但是至少要声明一个变量，其余变量作为赋值使用
 
 ## 2.3 指针
+* 函数返回局部变量的地址是安全的（C语言不同）
+    * 如下图，函数返回后，v的地址依然存在。每次调用f返回一个不同的值
+![2019-11-08-15-56-41.png](./images/2019-11-08-15-56-41.png)
 
 
 
