--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -5,6 +5,7 @@
     - [2.1 声明的通用形式](#21-声明的通用形式)
     - [2.2 短变量声明](#22-短变量声明)
     - [2.3 指针](#23-指针)
+    - [2.4 new](#24-new)
 
 <!-- /TOC -->
 
@@ -50,6 +51,12 @@ name:=value
 * 函数返回局部变量的地址是安全的（C语言不同）
     * 如下图，函数返回后，v的地址依然存在。每次调用f返回一个不同的值
 ![2019-11-08-15-56-41.png](./images/2019-11-08-15-56-41.png)
+
+## 2.4 new
+```
+p :=new(int)
+```
+* 初始化T类型为0值，并且返回该变量指针
 
 
 
