--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -1,11 +1,18 @@
 <!-- TOC -->
 
 - [1. 名称](#1-名称)
-- [2. 声明](#2-声明)
+- [2. 赋值](#2-赋值)
     - [2.1 声明的通用形式](#21-声明的通用形式)
     - [2.2 短变量声明](#22-短变量声明)
     - [2.3 指针](#23-指针)
     - [2.4 new](#24-new)
+    - [2.5 变量生命周期](#25-变量生命周期)
+- [3. 赋值](#3-赋值)
+    - [3.1 多重赋值](#31-多重赋值)
+- [4. 类型声明](#4-类型声明)
+- [5. 包和文件](#5-包和文件)
+    - [5.1 导入](#51-导入)
+    - [5.2 初始化](#52-初始化)
 
 <!-- /TOC -->
 
@@ -24,7 +31,7 @@
         * panic、recover：出错处理机制
     ![2019-11-05-09-38-45.png](./images/2019-11-05-09-38-45.png)
 
-# 2. 声明
+# 2. 赋值
 ## 2.1 声明的通用形式
 ```
 var name type = value
@@ -58,7 +65,30 @@ p :=new(int)
 ```
 * 初始化T类型为0值，并且返回该变量指针
 
+## 2.5 变量生命周期
+* 包级别变量生命周期是整个程序
+* 局部变量的生命周期是改变量不被访问，被垃圾回收机制回收
 
 
-    
-    
+# 3. 赋值
+## 3.1 多重赋值
+* 交换场景非常适用
+```
+x,y=y,x
+```
+# 4. 类型声明
+```
+type newtypename typename
+```
+* 只有相同类型的值才能进行赋值和比较，适用type定义两种不同类型不能进行赋值和比较
+* type的底层类型决定了它的结构和表达式，比如type time float。time 类型可以适用float的相同的运算符
+
+
+# 5. 包和文件
+* 包中导出的字符是大写的成员才对包外可见
+
+## 5.1 导入
+* 导入没有使用的包会报错。优点是能消除代码演进过程中不需要的依赖。缺点是程序员写代码稍微麻烦。
+
+## 5.2 初始化
+* 包的初始化从初始化包级别的变量名开始，这些包
