--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/2. 程序结构.md
@@ -13,6 +13,8 @@
 - [5. 包和文件](#5-包和文件)
     - [5.1 导入](#51-导入)
     - [5.2 初始化](#52-初始化)
+    - [5.3 init](#53-init)
+- [6. 作用域](#6-作用域)
 
 <!-- /TOC -->
 
@@ -91,4 +93,20 @@ type newtypename typename
 * 导入没有使用的包会报错。优点是能消除代码演进过程中不需要的依赖。缺点是程序员写代码稍微麻烦。
 
 ## 5.2 初始化
-* 包的初始化从初始化包级别的变量名开始，这些包
+* 包的初始化从初始化包级别的变量名开始，这些变量按照声明顺序初始化。在依赖已经解析完毕的情况下，根据依赖的顺序进行。
+![2019-11-08-17-24-23.png](./images/2019-11-08-17-24-23.png)
+
+* 如果包中有多个文件，初始化按照编译器收到的文件顺序进行，go工具会在调用编译器前将.go文件进行排序
+
+## 5.3 init
+* 任何文件中可以包含任意数量的init函数
+```
+func init(){}
+```
+* init函数不能被调用和引用
+* init函数按照声明的顺序自动执行
+
+# 6. 作用域
+* 生命周期和作用域不一样
+    * 生命周期是创建和消亡（运行时属性）
+    * 作用域是作用范围（编译时属性）
