--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -2,6 +2,7 @@
 
 - [1. 背景](#1-背景)
 - [2. 整数](#2-整数)
+    - [2.1 二元操作符](#21-二元操作符)
 
 <!-- /TOC -->
 
@@ -26,4 +27,13 @@
 * int8、int16、int32、int64、uint8、uint16、uint32、uint64
 * int类型位数等于该平台上运算效率最高的值，一般是64为或者是32位
 * rune是int32 同义词，常常用于指明一个值是Unicode码点，可以互换使用
-* byte和int8是同义词，强调一个值是原始数据，并非
+* byte和int8是同义词，强调一个值是原始数据，并非量值
+* uintptr是无符号整数，其大小并不确定，但足以完整存放指针。uintptr仅仅用于底层编程，    例如go程序与C程序库或者操作系统界面
+
+## 2.1 二元操作符
+* 操作符包括算术运算符、逻辑运算符、比较运算符
+* 运算符的优先级如下
+    ![2019-11-11-09-58-44.png](./images/2019-11-11-09-58-44.png)
+* %运算只能运用于整数，%行为因编程语言而异，go语言中，%的余数总是和被除数一致-5%3和-5%-3都是2。
+* go 操作符/和C语言保持一致
+
