--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -3,6 +3,7 @@
 - [1. 背景](#1-背景)
 - [2. 整数](#2-整数)
     - [2.1 二元操作符](#21-二元操作符)
+        - [2.2 位运算](#22-位运算)
 
 <!-- /TOC -->
 
@@ -36,4 +37,9 @@
     ![2019-11-11-09-58-44.png](./images/2019-11-11-09-58-44.png)
 * %运算只能运用于整数，%行为因编程语言而异，go语言中，%的余数总是和被除数一致-5%3和-5%-3都是2。
 * go 操作符/和C语言保持一致
+* 所有的基础数据类型都可以进行比较，这意味着两个相同的数据类型可以使用==和！=进行比较。数值类型和字符串还能进行排序。
 
+### 2.2 位运算
+![2019-11-11-10-12-59.png](./images/2019-11-11-10-12-59.png)
+* ^表示按位“异或”， 若作为一元运算符，就是按位取反
+* &^ 表示按位清除，
