--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -42,4 +42,6 @@
 ### 2.2 位运算
 ![2019-11-11-10-12-59.png](./images/2019-11-11-10-12-59.png)
 * ^表示按位“异或”， 若作为一元运算符，就是按位取反
-* &^ 表示按位清除，
+* &^ 表示按位清除，比如z=x&^y,若y的某位是1，则z的对应位是0
+![2019-11-11-11-54-16.png](./images/2019-11-11-11-54-16.png)
+
