--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -4,6 +4,8 @@
 - [2. 整数](#2-整数)
     - [2.1 二元操作符](#21-二元操作符)
         - [2.2 位运算](#22-位运算)
+- [3 浮点数、复数](#3-浮点数复数)
+- [4 字符串](#4-字符串)
 
 <!-- /TOC -->
 
@@ -44,4 +46,11 @@
 * ^表示按位“异或”， 若作为一元运算符，就是按位取反
 * &^ 表示按位清除，比如z=x&^y,若y的某位是1，则z的对应位是0
 ![2019-11-11-11-54-16.png](./images/2019-11-11-11-54-16.png)
+
+# 3 浮点数、复数
+* 浮点数转int，正数向下取整，复数向上取整，感官上都是舍弃小数部分
+
+# 4 字符串
+* len（）返回的是字符串的字节数，并非是文字符号数目
+* 字符串的值无法改变，
 
