--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -52,5 +52,13 @@
 
 # 4 字符串
 * len（）返回的是字符串的字节数，并非是文字符号数目
-* 字符串的值无法改变，
+* 字符串的值无法改变，字符串本身包含的字节序列永远不变
+    * 下面的操作违法
+    ```
+    s:="xyz"
+    s[0]='a'
+    ```
+    * 不可变意味着两个字符串能安全的公用同一段底层内存，使得复制任意长度的字符串开销都很低廉
+![2019-11-12-09-48-18.png](./images/2019-11-12-09-48-18.png)
+* golang 默认使用Unicode中的utf-8编码，utf-8是变长编码，兼容ascii
 
