--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -6,6 +6,7 @@
         - [2.2 位运算](#22-位运算)
 - [3 浮点数、复数](#3-浮点数复数)
 - [4 字符串](#4-字符串)
+    - [4.1 字符串工具](#41-字符串工具)
 
 <!-- /TOC -->
 
@@ -62,3 +63,10 @@
 ![2019-11-12-09-48-18.png](./images/2019-11-12-09-48-18.png)
 * golang 默认使用Unicode中的utf-8编码，utf-8是变长编码，兼容ascii
 
+## 4.1 字符串工具
+4个标准包对字符串处理非常重要:bytes、strings、strconv、Unicode
+
+* strings包提供了许多函数，用于搜索、替换、比较、修整、切片、连接字符串
+* bytes也有类似的函数，用户操作字节slice，由于字符串不可变，因此按照增量方式构建字符串会导致多次内存的分配和复制。这时候，使用bytes.Buffer效率更高
+* strconv 包具备的函数，主要用于转化bool、整数、浮点与之对应的字符串形式。或把字符串转化成bool、浮点、整数。另外还有位字符串添加、去除引号的函数
+* unicode 
