--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -7,6 +7,7 @@
 - [3 浮点数、复数](#3-浮点数复数)
 - [4 字符串](#4-字符串)
     - [4.1 字符串工具](#41-字符串工具)
+- [5. 常量](#5-常量)
 
 <!-- /TOC -->
 
@@ -69,4 +70,9 @@
 * strings包提供了许多函数，用于搜索、替换、比较、修整、切片、连接字符串
 * bytes也有类似的函数，用户操作字节slice，由于字符串不可变，因此按照增量方式构建字符串会导致多次内存的分配和复制。这时候，使用bytes.Buffer效率更高
 * strconv 包具备的函数，主要用于转化bool、整数、浮点与之对应的字符串形式。或把字符串转化成bool、浮点、整数。另外还有位字符串添加、去除引号的函数
-* unicode 
+* unicode 包具备判别文字字符串特性的函数，比如IsDigit、IsLetter、IsUpper、IsLower,它对原字符串的每个字符串做指定变换，生成并返回一个新字符串
+
+# 5. 常量
+* 常量是一种表达式，在编译阶段句计算出表达式的值
+* 所有常量都属于基本数据类型，bool、字符串、数字
+
