--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -8,6 +8,7 @@
 - [4 字符串](#4-字符串)
     - [4.1 字符串工具](#41-字符串工具)
 - [5. 常量](#5-常量)
+    - [5.1 常量生成器 iota](#51-常量生成器-iota)
 
 <!-- /TOC -->
 
@@ -75,4 +76,19 @@
 # 5. 常量
 * 常量是一种表达式，在编译阶段句计算出表达式的值
 * 所有常量都属于基本数据类型，bool、字符串、数字
+* 若同时声明一组常量，除了第一项外，其它项在等号右侧的表达式可以省略，这意味着服用前面表达式和类型
+    ```
+    const(
+        a=1
+        b
+        c=2
+        d
+    )
+    fmt.println(a,b,c,d) //1 1 2 2
+    ```
 
+## 5.1 常量生成器 iota
+* 常量声明可以使用常量生成器iota，它创建一系列值，而不是逐个显示写出，常量声明中，iota从0开始取值，逐项+1
+![2019-11-12-11-39-25.png](./images/2019-11-12-11-39-25.png)
+![2019-11-12-11-41-54.png](./images/2019-11-12-11-41-54.png)
+* iota 
