--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/3. 基本数据.md
@@ -9,6 +9,7 @@
     - [4.1 字符串工具](#41-字符串工具)
 - [5. 常量](#5-常量)
     - [5.1 常量生成器 iota](#51-常量生成器-iota)
+    - [5.2 无类型常量](#52-无类型常量)
 
 <!-- /TOC -->
 
@@ -91,4 +92,16 @@
 * 常量声明可以使用常量生成器iota，它创建一系列值，而不是逐个显示写出，常量声明中，iota从0开始取值，逐项+1
 ![2019-11-12-11-39-25.png](./images/2019-11-12-11-39-25.png)
 ![2019-11-12-11-41-54.png](./images/2019-11-12-11-41-54.png)
-* iota 
+* iota 机制存在缺陷，比如不存在指数运算符，所以无法生成1000的幂
+
+
+## 5.2 无类型常量
+* 虽然可以是任意类型的基本数据，比如int和float，但是许多常量并不属于某一个具体常量，这些值比基本类型的数字精度更高，且算术精度高于原生的机器精度。从属常量待定的常量有6中
+    * 无类型bool
+    * 无类型整数
+    * 无类型文字符号
+    * 无类型浮点数
+    * 无类型复数
+    * 无类型字符串
+* 除了精度更高，其还能写更多类型并且无需要转化，比如ZiB、YiB过大，那种类型都无法存储，但是上例都是合法常量
+
