--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -2,6 +2,7 @@
 
 - [1. 背景](#1-背景)
 - [2. 数组](#2-数组)
+- [3. slice](#3-slice)
 
 <!-- /TOC -->
 # 1. 背景
@@ -23,3 +24,18 @@ var a [...]int{1,2,3}
 ```
 * 数组长度是数组类型的一部分，所以[3]int和[4]int是两种不同的数据类型
 * 数组长度必须是常量表达式，也就是数组长度必须要在编译时间确定
+
+* 可以在初始化部分直接写数组元素个数
+    * 下面是定义了一个元素个数为100的数组，除了最后一个是-1外，其它元素都是0值
+    ```
+    vat a [...]int{99:-1}
+    ```
+
+* 如果一个数组中的元素是可以比较的，那么这个数组就是可以比较的
+    * 可以使用==判断两个数组是否完全相同，同样!=也可以使用
+    ![2019-11-13-09-55-20.png](./images/2019-11-13-09-55-20.png)
+
+
+# 3. slice
+* slice表示拥有相同数据类型的可变长度序列
+* slice和数组紧密相连，slice是一种轻量级的数据结构，
