--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -38,4 +38,7 @@ var a [...]int{1,2,3}
 
 # 3. slice
 * slice表示拥有相同数据类型的可变长度序列
-* slice和数组紧密相连，slice是一种轻量级的数据结构，
+* slice和数组紧密相连，slice是一种轻量级的数据结构，可以用来访问数组的部分或者全部元素。
+    * 该数组称为slice的底层数组
+    * slice 有三个属性，指针、长度、容量
+    
