--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -41,4 +41,10 @@ var a [...]int{1,2,3}
 * slice和数组紧密相连，slice是一种轻量级的数据结构，可以用来访问数组的部分或者全部元素。
     * 该数组称为slice的底层数组
     * slice 有三个属性，指针、长度、容量
-    
+        * 指针执行数组中第一个可以从slice访问到的数组元素
+        * 长度指slice访问的元素个数
+        * 容量值的是slice起始元素到底层数组的最后一个元素的元素个数
+        * go内置len和cap来获取slice的长度和容量
+* 底层数组可以对应多个slice，这些slice可以引用数组的任何位置，彼此之间的元素可以重叠
+    * 下图显示了一个月份字符串数组，和两个元素存在重叠的slice
+    ![2019-11-13-11-04-44.png](./images/2019-11-13-11-04-44.png)
