--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -48,3 +48,9 @@ var a [...]int{1,2,3}
 * 底层数组可以对应多个slice，这些slice可以引用数组的任何位置，彼此之间的元素可以重叠
     * 下图显示了一个月份字符串数组，和两个元素存在重叠的slice
     ![2019-11-13-11-04-44.png](./images/2019-11-13-11-04-44.png)
+* 如果slice引用超过了被引用对象的容量，即cap(s),会导致宕机。如果slice引用超过被引用对象的长度，及len(s),最终slice会比原来的slice长
+![2019-11-13-11-25-34.png](./images/2019-11-13-11-25-34.png)
+
+* slice 并不能像数组一样直接使用比较，标准库中提供了高度优化的bytes.Equal来比较两个字节的slice，但是对于其它类型的slice，还是需要自己写比较函数进行比较
+    * 这种深度的比较函数看上去很简单，并且比较的时候并不比字符串使用的==耗时
+    * 为什么
