--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -53,4 +53,4 @@ var a [...]int{1,2,3}
 
 * slice 并不能像数组一样直接使用比较，标准库中提供了高度优化的bytes.Equal来比较两个字节的slice，但是对于其它类型的slice，还是需要自己写比较函数进行比较
     * 这种深度的比较函数看上去很简单，并且比较的时候并不比字符串使用的==耗时
-    * 为什么slice不可以直接使用自身比较，
+    * 为什么slice不可以直接使用自身比较？因为slice需要做的是深层次比较，如果slice中的元素包含map，那么用==直接比较
