--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -3,6 +3,7 @@
 - [1. 背景](#1-背景)
 - [2. 数组](#2-数组)
 - [3. slice](#3-slice)
+    - [3.1 append函数](#31-append函数)
 
 <!-- /TOC -->
 # 1. 背景
@@ -54,3 +55,11 @@ var a [...]int{1,2,3}
 * slice 并不能像数组一样直接使用比较，标准库中提供了高度优化的bytes.Equal来比较两个字节的slice，但是对于其它类型的slice，还是需要自己写比较函数进行比较
     * 这种深度的比较函数看上去很简单，并且比较的时候并不比字符串使用的==耗时
     * 为什么slice不可以直接使用自身比较？因为slice需要做的是深层次比较，如果slice中的元素包含map，那么用==直接比较
+* make函数可以创建指定长度的slice
+    * cap参数可以省略，省略则len和cap相等
+    * 下面是make创建了一个无名数组，这个数组仅可以通过slice来访问
+    ```
+    make([]T,len)
+    make([]T,len,cap)
+    ```
+## 3.1 append函数
