--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -63,3 +63,10 @@ var a [...]int{1,2,3}
     make([]T,len,cap)
     ```
 ## 3.1 append函数
+* appen 函数对理解slice非常重要
+![2019-11-14-10-59-22.png](./images/2019-11-14-10-59-22.png)
+每一次appendInt都必须检查slice是否有足够的容量来存储新的元素
+* 如果底层容量足够，它会定义一个新的slice（底层数组不变），并将新的元素放在新的位置上
+* 如果slice容量不足，则会创建一个新的底层数组
+* 一次扩容一倍，我想是是为了减少分配内存空间时间，空间换时间
+
