--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -4,6 +4,7 @@
 - [2. 数组](#2-数组)
 - [3. slice](#3-slice)
     - [3.1 append函数](#31-append函数)
+- [4. map](#4-map)
 
 <!-- /TOC -->
 # 1. 背景
@@ -69,4 +70,34 @@ var a [...]int{1,2,3}
 * 如果底层容量足够，它会定义一个新的slice（底层数组不变），并将新的元素放在新的位置上
 * 如果slice容量不足，则会创建一个新的底层数组
 * 一次扩容一倍，我想是是为了减少分配内存空间时间，空间换时间
+
+
+# 4. map
+```
+a:=map[string]int{
+    "alice":1
+    "jone":2
+}
+
+a:=make(map[string]int)
+```
+
+* delete 根据键删除元素
+    * 即使键不再map元素中，下面操作也是安全的
+        ```
+        delete(a,"alice")
+        ```
+* map使用给定的键来查找元素，如果对应的元素不存在，就返回0值（Python不一样）
+* map元素不是一个变量，不可以获取它的地址
+    * 我们无法获取map元素地址是因为随着map元素增长，可能导致已有的元素重新散列到新的存储位置，这样使得获取的地址无效
+    ```
+    _=&a["aline"]//编译出错，无法获取map元素地址
+    ```
+* map零值是nil，大多数操作能在map的零值nil上操作
+    * 包括查找元素、删除元素、获取元素个数、len(),因为这些和nil map行为一致
+    * 但是在nil map赋值会导致错误
+    ```
+    var a map[string]int
+    a["alice"]=1//err
+    ```
 
