--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -95,9 +95,22 @@ a:=make(map[string]int)
     ```
 * map零值是nil，大多数操作能在map的零值nil上操作
     * 包括查找元素、删除元素、获取元素个数、len(),因为这些和nil map行为一致
-    * 但是在nil map赋值会导致错误
+    * 但是在nil map赋值会导致错误。因此在赋值之前，一定要进行初始化
     ```
     var a map[string]int
     a["alice"]=1//err
+    ```
+* 通过下标访问map中的元素总是会有值，因为即使键不在map中也会返回0值。
+    * 那么我们如何判断一个键是否在map中，总不能遍历map把
+    ```
+    age,ok:=a["alice"]
+    if !ok{
+        //alice 不在map中
+    }
+    ```
+    ```
+    if a,ok:=a["alice"]; !ok{
+        //alice不再map中
+    }
     ```
 
