--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -5,6 +5,7 @@
 - [3. slice](#3-slice)
     - [3.1 append函数](#31-append函数)
 - [4. map](#4-map)
+- [5. 结构体](#5-结构体)
 
 <!-- /TOC -->
 # 1. 背景
@@ -113,4 +114,6 @@ a:=make(map[string]int)
         //alice不再map中
     }
     ```
+# 5. 结构体
+
 
