--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -115,5 +115,10 @@ a:=make(map[string]int)
     }
     ```
 # 5. 结构体
-
+* 点号获取成员，既可以用在结构体上也可以直接使用在结构体指针上
+    ```
+    var employeeOfTheMonth *Employee
+    employeeOfTheMonth.Position
+    //等价于(*employeeOfTheMonth).Position
+    ```
 
