--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -6,6 +6,7 @@
     - [3.1 append函数](#31-append函数)
 - [4. map](#4-map)
 - [5. 结构体](#5-结构体)
+    - [5.1 结构体字面量](#51-结构体字面量)
 
 <!-- /TOC -->
 # 1. 背景
@@ -121,4 +122,14 @@ a:=make(map[string]int)
     employeeOfTheMonth.Position
     //等价于(*employeeOfTheMonth).Position
     ```
+* 成员变量的顺序对结构体非常重要，如果结构体成员变量信息发生变化，那么我们任务这是在定义一个新的结构体
+* struce 成员变量的类型不能包含自己，但是可以定义一个包含自己的指针类型
+    ```
+    type tree struct{
+        value int
+        left,right *tree
+    }
+    ```
+
+## 5.1 结构体字面量
 
