--- a/云计算/KubeFlow/Pytorch-Operator/2. package unstructured.md
+++ b/云计算/KubeFlow/Pytorch-Operator/2. package unstructured.md
@@ -33,5 +33,9 @@ https://<k8s-api-server>/apis/argoproj.io/v1alpha1/namespaces/default/workflows
 argo 理解，见k8s/重要基础知识
 
 
+老大，我没复现出来。下面三步是我的操作顺序
+
+
+
 
 
