--- a/云计算/KubeFlow/Pytorch-Operator/Issue/1. Pytorch-Operator get service is nil always.md
+++ b/云计算/KubeFlow/Pytorch-Operator/Issue/1. Pytorch-Operator get service is nil always.md
@@ -120,7 +120,15 @@ read is skipped if no adoptions are attempted
 # 5. 扩展
 ## 5.1 service 作用
 * service和ip通过label动态绑定
-【原理】
+    * 参见k8s中service模块介绍
+* Pytorch-Operator中为什么通过service 访问master pod
+    * 该master server是headless service
+    * headless service 没有EndPoint，通过service name能直接访问到master pod
+* 参考之前设计的mpirun-controller
+    * master service设计的service很有意思，按理说，我们先需要获取master ip，然后倒入到worker pod中
+    * 但是，有了service，我们能根据固定service name访问到master pod，这样能简化代码，参考之前我们写的mpi-Controller，在worker等待所有pod起来之前做了很多工作，但是通过service能解决这个问题
+    * 先后启动的问题，可以除了service，还必须要和容器的init功能才能实现
+* 总之，master service和Container init结合起来能很好的实现先后启动的问题
 ## 5.2 打断点 为什么一段时间会崩掉
 【待解决】
 
