--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -6,7 +6,8 @@
     - [3.1 append函数](#31-append函数)
 - [4. map](#4-map)
 - [5. 结构体](#5-结构体)
-    - [5.1 结构体字面量](#51-结构体字面量)
+    - [5.1 结构体比较](#51-结构体比较)
+    - [](#)
 
 <!-- /TOC -->
 # 1. 背景
@@ -131,5 +132,21 @@ a:=make(map[string]int)
     }
     ```
 
-## 5.1 结构体字面量
+## 5.1 结构体比较
+如果结构体的所有成员变量是可以比较的，那么这两个结构体就是可以比较的。
+* 结构体比较可以使用==和!=
+* ==是顺序比较两个结构体的所有成员变量
+
+* 和其它可比较的类型一样，可比较的结构体都可以作为map的键类型
+```
+type  address struct{
+    hostname string 
+    port int
+}
+hits:=make(make(map[address]int))
+hits[address{"golang.org",433}++]
+```
+
+
+## 
 
