--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -7,7 +7,7 @@
 - [4. map](#4-map)
 - [5. 结构体](#5-结构体)
     - [5.1 结构体比较](#51-结构体比较)
-    - [](#)
+    - [5.2 结构体嵌套和成员变量](#52-结构体嵌套和成员变量)
 
 <!-- /TOC -->
 # 1. 背景
@@ -148,5 +148,20 @@ hits[address{"golang.org",433}++]
 ```
 
 
-## 
+## 5.2 结构体嵌套和成员变量
+go有着不同寻常的结构体嵌套机制，可以将一个结构体作为另外一个结构体类型的成员变量使用。
+
+* go允许我们使用不带名称的结构体成员，只需要指定类型即可，这种结构体成员成为匿名成员
+    * 该结构体必须是一个类型或者指向命名类型的指针
+        * 
+    ```
+    type Point struct{
+        X,Y int
+    }
+    type Circle struct{
+        Point
+        Radius int
+    }
+    ```
+
 
