--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -153,7 +153,11 @@ go有着不同寻常的结构体嵌套机制，可以将一个结构体作为另
 
 * go允许我们使用不带名称的结构体成员，只需要指定类型即可，这种结构体成员成为匿名成员
     * 该结构体必须是一个类型或者指向命名类型的指针
-        * 
+        * 其实说成“匿名变量不是非常合适”，因为该成员变量的名字就是该类型的名字
+        * 没有什么快捷的方式来初始化结构体
+            ```
+            c:= Circle{1,1,2}//编译错误，未知的成员变量
+            ```
     ```
     type Point struct{
         X,Y int
