--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -8,6 +8,7 @@
 - [5. 结构体](#5-结构体)
     - [5.1 结构体比较](#51-结构体比较)
     - [5.2 结构体嵌套和成员变量](#52-结构体嵌套和成员变量)
+- [6. Json](#6-json)
 
 <!-- /TOC -->
 # 1. 背景
@@ -156,7 +157,7 @@ go有着不同寻常的结构体嵌套机制，可以将一个结构体作为另
         * 其实说成“匿名变量不是非常合适”，因为该成员变量的名字就是该类型的名字
         * 没有什么快捷的方式来初始化结构体
             ```
-            c:= Circle{1,1,2}//编译错误，未知的成员变量
+            c:= Circle{1,1,2}//编译错误，未知的成员变量i
             ```
     ```
     type Point struct{
@@ -167,5 +168,9 @@ go有着不同寻常的结构体嵌套机制，可以将一个结构体作为另
         Radius int
     }
     ```
+
+# 6. Json
+* json 是一种发送和接收数据格式的标准，xml、ASN.1、Google的Protocol Buffer
+* golang 标准库encoding/json、encoding.xml、encoding.asn1
 
 
