--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -9,6 +9,8 @@
     - [5.1 结构体比较](#51-结构体比较)
     - [5.2 结构体嵌套和成员变量](#52-结构体嵌套和成员变量)
 - [6. Json](#6-json)
+    - [6.1 golang类型转化成JSON](#61-golang类型转化成json)
+    - [6.2 Json转化成golang 类型](#62-json转化成golang-类型)
 
 <!-- /TOC -->
 # 1. 背景
@@ -172,5 +174,30 @@ go有着不同寻常的结构体嵌套机制，可以将一个结构体作为另
 # 6. Json
 * json 是一种发送和接收数据格式的标准，xml、ASN.1、Google的Protocol Buffer
 * golang 标准库encoding/json、encoding.xml、encoding.asn1
+
+## 6.1 golang类型转化成JSON 
+* json.Marshal
+    * 这种方式打印出来对用户观看并不是非常友好
+```
+data,err:=json.Marshal(movies)
+if err !=nil{
+    log.err....
+}
+fmt.printf("%s\n",data)
+```
+![2019-11-21-14-57-10.png](./images/2019-11-21-14-57-10.png)
+* json.MarshalIndent
+    * 该方式打印出来对用户更加友好
+![2019-11-21-14-58-05.png](./images/2019-11-21-14-58-05.png)
+
+* 自由字母是大写(可导出)的成员才能被转化成JSON
+* 成员标签定义（field tag）
+    * 转化成JSON时，Year变成released，Color编程color
+    * omitempty 标识成员变量的值是零值或者成员变量是空时，JSON不会转化该数据
+    ![2019-11-21-15-02-34.png](./images/
+    2019-11-21-15-02-34.png)
+
+## 6.2 Json转化成golang 类型
+
 
 
