--- Auto-Git Commit ---

--- a/云计算/k8s/kubenetes概念/5. QoS of Kubernetes/1.pod支持不同qos.md
+++ b/云计算/k8s/kubenetes概念/5. QoS of Kubernetes/1.pod支持不同qos.md
@@ -2,8 +2,17 @@
 
 - [1. 背景](#1-背景)
 - [2. pod的三种级别qos 介绍和使用](#2-pod的三种级别qos-介绍和使用)
+    - [2.1 CPU和内存资源](#21-cpu和内存资源)
+        - [2.1.1 CPU](#211-cpu)
+        - [2.1.2 Memory](#212-memory)
+    - [2.2 compressible or incompressible 资源](#22-compressible-or-incompressible-资源)
+        - [2.2.1 Compressible Resource Guarantees](#221-compressible-resource-guarantees)
+        - [2.2.2 Incompressible Resource Guarantees](#222-incompressible-resource-guarantees)
 
 <!-- /TOC -->
+
+* 参考：
+    * https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
 
 # 1. 背景
 
@@ -12,4 +21,24 @@
 * kubernetes 根据上诉request和limit设置了三种不同级别的qos（Quality of Service）
 
 # 2. pod的三种级别qos 介绍和使用
+* request:是system保证要分配给容器的资源
+* limit: 是系统最多能给容器分配的资源
+* 调度是根据request资源进行调度，而不是limit
 
+## 2.1 CPU和内存资源
+### 2.1.1 CPU
+CPU resoures are measured in (v)Core equivalents. You can specify them in decimals (e.g. 0.5 meaning half a core) or in milicpu (e.g. 500m meaning half a core).
+
+### 2.1.2 Memory
+Memory resources are measured in bytes. You specify them as decimals with one of SI suffixes (E, P, T, G, M, K) or their power-of-two equivalents (Ei, Pi, Ti, Gi, Mi, Ki). For example, the following represent roughly the same value: 128974848, 129e6, 129M, 123Mi.
+
+## 2.2 compressible or incompressible 资源
+How the request and limit are enforced depends on whether the resource is compressible or incompressible.（只有内存和CPU）
+
+### 2.2.1 Compressible Resource Guarantees
+* Kubernetes are only supporting CPU for now.
+* Pods will be throttled if they exceed their limit. If limit is unspecified, then the pods can use excess CPU when available.
+
+### 2.2.2 Incompressible Resource Guarantees
+* Kubernetes are only supporting memory for now.
+* Pods will get the amount of memory they request, if they exceed their memory request, they could be killed (if some other pod needs memory), but if pods consume less memory than requested, they will not be killed.
