--- Auto-Git Commit ---

--- a/云计算/k8s/kubenetes概念/5. QoS of Kubernetes/1.pod支持不同qos.md
+++ b/云计算/k8s/kubenetes概念/5. QoS of Kubernetes/1.pod支持不同qos.md
@@ -8,6 +8,10 @@
     - [2.2 compressible or incompressible 资源](#22-compressible-or-incompressible-资源)
         - [2.2.1 Compressible Resource Guarantees](#221-compressible-resource-guarantees)
         - [2.2.2 Incompressible Resource Guarantees](#222-incompressible-resource-guarantees)
+    - [2.3 kubernetes三种qos](#23-kubernetes三种qos)
+        - [2.3.1 Guaranteed (QoS)](#231-guaranteed-qos)
+        - [2.3.2 Burstable (QoS)](#232-burstable-qos)
+        - [2.3.3 Best-Effort (QoS)](#233-best-effort-qos)
 
 <!-- /TOC -->
 
@@ -37,8 +41,35 @@ How the request and limit are enforced depends on whether the resource is compre
 
 ### 2.2.1 Compressible Resource Guarantees
 * Kubernetes are only supporting CPU for now.
-* Pods will be throttled if they exceed their limit. If limit is unspecified, then the pods can use excess CPU when available.
+* Pods will be throttled if they exceed their limit. If limit is unspecified, then the pods can use excess CPU when available.（只是说压缩pod CPU 资源，并没有说kill掉pod）
+* 没有对request cpu进行限制
 
 ### 2.2.2 Incompressible Resource Guarantees
 * Kubernetes are only supporting memory for now.
-* Pods will get the amount of memory they request, if they exceed their memory request, they could be killed (if some other pod needs memory), but if pods consume less memory than requested, they will not be killed.
+* Pods will get the amount of memory they request, if they exceed their memory request, they could be killed (if some other pod needs memory), but if pods consume less memory than requested, they will not be killed.（如果内存超过request就可能被杀掉）
+* When Pods use more memory than their limit, a process that is using the most amount of memory, inside one of the pod's containers, will be killed by the kernel.（如果超过limit，pod中的容器一定会被杀掉）
+
+
+## 2.3 kubernetes三种qos
+* If the system runs out of CPU or memory resources (where sum of limits > machine capacity). Ideally, kubernetes should kill containers that are less important.
+
+* 三种qos 分别是Guaranteed, Burstable, and Best-Effort, 优先级分别降低
+
+### 2.3.1 Guaranteed (QoS)
+* Pods are considered top-priority and are guaranteed to not be killed until they exceed their limits.
+
+* pod中所有容器的所有资源都设置limit和rquest（非0），并且requts和limit都相等（不知道对GPU等其它资源是否是一样的要求）
+![](./images/2019-11-25-14-50-40.png)
+
+
+### 2.3.2 Burstable (QoS)
+* 只用当Best-Effort pods 不存在并且Burstable pod超过request请求时就会杀掉pod
+
+* 如果任意一个容器中的任意一个资源设置了request和可选的limit字段，那么该pod被认为是Burstable。如果limit没有被设置，那么默认是该节点容量
+
+
+### 2.3.3 Best-Effort (QoS)
+* pod可以使用该节点任意数量的内存
+* 当内存压力很大时，该类型的pod最容易被杀掉
+* 但pod中的所有资源都没有设置limit和requests，该pod被认为是 Best-Effort.
+![](./images/2019-11-25-15-05-50.png)
