--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
@@ -2,6 +2,7 @@
 
 - [1. 背景](#1-背景)
 - [2. 方法声明](#2-方法声明)
+    - [2.1 指针接受者方法](#21-指针接受者方法)
 
 <!-- /TOC -->
 # 1. 背景
@@ -23,3 +24,10 @@
 
 
 * 同一个包下的任何类型都可以声明方法，只要他的类型既不是指针类型也不是接口类型
+
+## 2.1 指针接受者方法
+* 如下图所示，使用指针来传递接受者的变量地址
+    * 下面必须通过（*Point）.ScaleBy，如果没有使用圆括号，会被理解成 *（Point.ScaleBy）
+    * 习惯上，都是通过指针来传递接受者
+    ![](./images/2019-11-28-09-37-21.png)
+    * 命令类型还有指向他们的指针是唯一可以出现在接受者声明处的类型，而且为了防止混淆，不允许本身是指针的类型进行方法声明
