--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
@@ -3,6 +3,8 @@
 - [1. 背景](#1-背景)
 - [2. 方法声明](#2-方法声明)
     - [2.1 指针接受者方法](#21-指针接受者方法)
+    - [2.2 nil是一个合法的接受者](#22-nil是一个合法的接受者)
+- [3. 通过结构体内嵌组成类型](#3-通过结构体内嵌组成类型)
 
 <!-- /TOC -->
 # 1. 背景
@@ -31,3 +33,24 @@
     * 习惯上，都是通过指针来传递接受者
     ![](./images/2019-11-28-09-37-21.png)
     * 命令类型还有指向他们的指针是唯一可以出现在接受者声明处的类型，而且为了防止混淆，不允许本身是指针的类型进行方法声明
+        ```
+        type P *int
+        func (P) f() {}//编译错误，非法的接受者
+        ```
+    
+    * 不能对一个不能取地址的Point接受者参数调用*Point方法，因为无法获取临时变量的地址（但是，如果是接受者是类型，而不是指针传递参数，那么可以直接使用临时变量来调用方法）
+        ```
+            Point{1,2}.ScaleBy(2)//编译错误：不能获取Point类型字面量地址
+        ```
+
+## 2.2 nil是一个合法的接受者
+![](./images/2019-11-28-10-17-43.png)
+
+# 3. 通过结构体内嵌组成类型
+```
+type Point Struct{X,Y float64}
+type ColoredPoint struct{
+    Point
+    Color color.RGBA
+}
+```
