--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
@@ -47,6 +47,8 @@
 ![](./images/2019-11-28-10-17-43.png)
 
 # 3. 通过结构体内嵌组成类型
+* 如下面所示，是一个嵌套Point类型的struct
+    * ColoredPoint 可以直接使用Point的类型和方法
 ```
 type Point Struct{X,Y float64}
 type ColoredPoint struct{
