--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
@@ -47,8 +47,10 @@
 ![](./images/2019-11-28-10-17-43.png)
 
 # 3. 通过结构体内嵌组成类型
-* 如下面所示，是一个嵌套Point类型的struct
+* 如下所示，是一个嵌套Point类型的struct
     * ColoredPoint 可以直接使用Point的类型和方法
+    * 不能讲Point 和ColoredPoint两者叫做继承。编译器中具体实现这种功能是，内嵌字段会告诉编译器生成额外的包装方法来调用Point声明方法。因此不能叫做集成。
+    * 如果ColoredPoint调用一个Distance（）方法，编译器首先会寻找ColoredPoint是否定义该方法，然后在Point中寻找，如果在同一级中发现同名方法时，就会报告选择子不明确错误
 ```
 type Point Struct{X,Y float64}
 type ColoredPoint struct{
@@ -56,3 +58,5 @@ type ColoredPoint struct{
     Color color.RGBA
 }
 ```
+ 
+
