--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/6. 方法.md
@@ -5,6 +5,7 @@
     - [2.1 指针接受者方法](#21-指针接受者方法)
     - [2.2 nil是一个合法的接受者](#22-nil是一个合法的接受者)
 - [3. 通过结构体内嵌组成类型](#3-通过结构体内嵌组成类型)
+- [4. 变量与方法表达式](#4-变量与方法表达式)
 
 <!-- /TOC -->
 # 1. 背景
@@ -59,4 +60,23 @@ type ColoredPoint struct{
 }
 ```
  
+# 4. 变量与方法表达式
+* 方法变量：将方法作为变量进行传递
+```
+func (p Point) Distance(q Point) float64{
+    return math.Hypot(q.X-p.x,q.Y-p.Y)
+}
+p:=Point{1,2}
+distabceFromP:=p.Distance
+fmt.Println(distabceFromP(q))
+```
+
+* 方法表达式：和调用一个普通函数不同，在调用方法的时候必须提供接受者，变按照选择的语法进行调用
+    * 方法携程T.f或者(*T).f，其中T是类型。把原来方法的接受者替换成函数的第一个形参，因此可以像平常的函数一样调用
+    ```
+    p:=Point{1,2}
+    q:=Point{4,6}
+    distance:=Point.Distance
+    distance(p,q)
+    ```
 
