--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
@@ -1,7 +1,17 @@
 <!-- TOC -->
 
-- [1. 背景](#1-背景)
+- [1. 接口定义](#1-接口定义)
 
 <!-- /TOC -->
 
-# 1. 背景
+# 1. 接口定义
+* 只有接口暴露的方法才能被接口调用
+    * 比如空接口可以被任何类型赋值，但是去无法调用被赋值的变量和方法
+    ```
+    var any interface{}
+    any=true
+    any=12.34
+    ...
+    ```
+    *  配套的，我们需要使用类型断言来实现从空接口中还原出实际值（后面讲解）
+    
