--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
@@ -1,6 +1,7 @@
 <!-- TOC -->
 
 - [1. 接口定义](#1-接口定义)
+- [2. 接口定义](#2-接口定义)
 
 <!-- /TOC -->
 
@@ -14,4 +15,6 @@
     ...
     ```
     *  配套的，我们需要使用类型断言来实现从空接口中还原出实际值（后面讲解）
-    
+
+
+# 2. 接口定义
