--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
@@ -3,6 +3,9 @@
 - [1. 接口定义](#1-接口定义)
 - [2. 接口定义](#2-接口定义)
     - [2.1 接口比较](#21-接口比较)
+- [3. go 标准库中的重要接口](#3-go-标准库中的重要接口)
+    - [3.1 使用sort.Interface来排序](#31-使用sortinterface来排序)
+    - [3.2 http.Handler 接口](#32-httphandler-接口)
 
 <!-- /TOC -->
 
@@ -54,3 +57,32 @@ w=nil
 ## 2.1 接口比较
 接口可以使用==和!=进行比较。如果两者的动态类型完全一致并且两者的动态值相等（前提是该类型可以进行比较），那么两个接口就是相等的。可以比较的接口就可一种为map键并且可以作为switch语句的操作数。
 
+需要注意的是，在比较两个接口值时，但是对应动态类型的值时不可以比较的（比如slice），那么这个比较会以崩溃的方式失败
+
+从这点来看，接口类型是非平凡的，其它类型要么是可以安全比较的（比如基础数据类型和指针），要么完全是不可以比较的（比如map、slice），但是当比较接口或者其中包含接口值的聚合类型时，我们必须小心崩溃的可能性。当做map键或者switch语句操作时也有类似的风险。
+
+
+# 3. go 标准库中的重要接口
+
+## 3.1 使用sort.Interface来排序
+通常我们的排序算法是针对特定的数据类型，如果是一种数据类型一种排序算法复制一遍就会让人很难受。golang sort包提供针对任意序列根据任意排序函数原地排序功能。sort.Interface 接口制定通用排序算法和每个具体的序列类型之间协议（contract）。这个接口的实现确定了序列的具体布局（通常是slice），以及元素期望的排序方式。
+
+
+一个原地排序算法需要三个信息，序列长度、比较两个元素含义以及如何交换两个元素，因此sort.Interface接口就有三个方法
+![](./images/2019-12-02-16-15-26.png)
+
+
+比如我们要实现stringslice排序，我们需要实现如下方法：
+![](./images/2019-12-02-16-19-43.png)
+
+下面我们就可以对字符串进行排序，字需要讲一个slice转换为StringSlice类型即可：
+```
+sort.Sort(StringSlice(names))
+```
+
+类型转换生成一个新的slice，与原始的names有相同的长度、容量和底层函数，不同的就是增加了三个用于排序的方法。
+
+字符串slice排序太常用了，因此sort包中包含提供了StringSlice类型，以及一个直接排序的Strings函数，于是上面的代码可以直接简写成sort.Strings(names)
+
+
+## 3.2 http.Handler 接口
