--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
@@ -6,6 +6,7 @@
 - [3. go 标准库中的重要接口](#3-go-标准库中的重要接口)
     - [3.1 使用sort.Interface来排序](#31-使用sortinterface来排序)
     - [3.2 http.Handler 接口](#32-httphandler-接口)
+    - [3.1 区分不同url](#31-区分不同url)
 
 <!-- /TOC -->
 
@@ -86,3 +87,17 @@ sort.Sort(StringSlice(names))
 
 
 ## 3.2 http.Handler 接口
+![](./images/2019-12-02-16-28-50.png)
+
+如下面，是一个简单的http server例子：
+    * 下面很有意思是ListenAndServer第二个参数是一个handler interface，因此下面例子传入进来的是一个db，而不是一个func
+![](./images/2019-12-02-16-40-11.png)
+
+
+## 3.1 区分不同url
+* 下面分别添加/list和/price两种url
+    * URL Query方法，把http的请求解析为一个map
+![](./images/2019-12-02-16-42-36.png)
+![](./images/2019-12-02-16-43-08.png)
+
+
