--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
@@ -6,7 +6,10 @@
 - [3. go 标准库中的重要接口](#3-go-标准库中的重要接口)
     - [3.1 使用sort.Interface来排序](#31-使用sortinterface来排序)
     - [3.2 http.Handler 接口](#32-httphandler-接口)
-    - [3.1 区分不同url](#31-区分不同url)
+        - [3.2.1 区分不同url](#321-区分不同url)
+        - [3.2.2 ServeMux](#322-servemux)
+        - [3.2.3 DefaultServeMux](#323-defaultservemux)
+- [3.3 error接口](#33-error接口)
 
 <!-- /TOC -->
 
@@ -94,10 +97,36 @@ sort.Sort(StringSlice(names))
 ![](./images/2019-12-02-16-40-11.png)
 
 
-## 3.1 区分不同url
+### 3.2.1 区分不同url
 * 下面分别添加/list和/price两种url
     * URL Query方法，把http的请求解析为一个map
 ![](./images/2019-12-02-16-42-36.png)
 ![](./images/2019-12-02-16-43-08.png)
+
+### 3.2.2 ServeMux
+上面处理过程其实并不实用，因为我们通常是讲不同处理逻辑独立分配到独立的处理函数中去。net/http包提供了一个请求多工转发器ServeMux,用来简化URL和处理程序之间的关联。一个ServeMux可以把多个http handler组合成单个http.Handler,在这里我们再次看到满足同一个接口的多个类型是可以替代的，Web服务器可以把请求分发到任何一个http.handler,而不用管后面具体类型是什么
+
+![](./images/2019-12-02-17-03-29.png)
+* http.HandleFunc(db.list)其实是一个类型转化，而不是函数调用。这里的http.HandleFunc是一个类型
+![](./images/2019-12-02-17-06-33.png)
+* HandleFunc 演示了一个GO语言机制一些不常见的特性，它不仅是一个函数类型，还有自己的方法，也满足http.Handler，它的ServeHttp调用的就是函数本身。所以HandlerFunction就是一个让函数值满足接口的适配器
+
+因为这种注册处理程序太常见了，所以ServeMux引入一个HandleFunc便捷方法来简化调用，处理程序注册部分的代码可以简化为如下形式
+* 这种可以定义多种不同服务器，但是绝大数程序主需要一个web服务，如果每次都需要显示注册到应用程序本身的serverMux实例上显得特别麻烦
+![](./images/2019-12-02-17-12-23.png)
+
+### 3.2.3 DefaultServeMux
+为了简便起见，net/http包提供一个全局的ServeMux实例DefaultServeMux，以及包级别的注册函数http.handle和http.HandleFunc，要让DefaultServeMux作为服务器处理程序，无需传递给ListernAndServer，直接传nil就可。
+
+服务器的主函数进一步简化为如下所示：
+![](./images/2019-12-02-17-23-07.png)
+
+
+# 3.3 error接口
+我们经常使用到神秘的error类型，实际上Error只是一个接口类型，不含一个返回错误消息的方法
+![](./images/2019-12-02-17-26-13.png)
+
+* 创建一个error最简单的方法是error.new()
+![](./images/2019-12-02-17-27-26.png)
 
 
