--- a/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/7.接口.md
@@ -129,4 +129,16 @@ sort.Sort(StringSlice(names))
 * 创建一个error最简单的方法是error.new()
 ![](./images/2019-12-02-17-27-26.png)
 
+* 底层errorString 是一个结构体，没有直接使用string，是为了避免将来无意间的布局变更
+* error 接口是*errorString指针，而不是原始的errorString，主要是为了让每次new分配的error实例都不相等
+![](./images/2019-12-02-17-31-35.png)
 
+直接使用errors.New()是比较罕见的，因为有一个更加简单易用的fmt.Errorf,还额外提供了一个字符串格式化功能。
+
+![](./images/2019-12-02-17-33-09.png)
+
+
+error类型有很多，Go底层系统调用API中定义了error接口的数字类型Errno
+![](./images/2019-12-02-17-35-46.png)
+
+![](./images/2019-12-02-17-37-16.png)
