--- a/编程语言/shell/1. shell 经典使用场景.md
+++ b/编程语言/shell/1. shell 经典使用场景.md
@@ -32,3 +32,14 @@ kubectl get secret -n kubeflow | awk '{print "kubectl delete secret -n kubeflow 
 kubectl get secret -n knative-serving  | awk '{print "kubectl delete secret -n knative-serving  "$1" --force --grace-period=0"}' | bash
 
 kubectl get replicaset.apps -n kubeflow | awk '{print "kubectl delete replicaset.apps -n kubeflow "$1}' | bash
+
+
+
+# 2. xargs
+* 统计项目代码量行数
+    * wc -l file ：可以统计每个文件行数
+    * xargs 将管道参数用分隔符分隔，然后传递给后面的命令
+```
+find . -name "*.c" | xargs wc -l
+```
+
