--- Auto-Git Commit ---

--- a/云计算/cuda/1. 入门.md
+++ b/云计算/cuda/1. 入门.md
@@ -5,6 +5,7 @@
     - [2.1 cuda程序执行流程](#21-cuda程序执行流程)
     - [2.2 cuda三个函数类型](#22-cuda三个函数类型)
     - [2.3 kernel线程层次结构](#23-kernel线程层次结构)
+    - [2.4 流式处理器（SM）](#24-流式处理器sm)
 
 <!-- /TOC -->
 # 1. 背景
@@ -42,4 +43,25 @@
 ## 2.3 kernel线程层次结构
 * kernel在device上执行其实是启动很多线程，一个kernel启动的所有线程称为一个网格grid，同一个网格上的线程共享全局内存空间。
 
-* grid是线程结构的第一层次，
+* grid是线程结构的第一层次，网格可以分成很多线程块，一个线程块中包含很多线程，这是第二层次
+    * 如下图所示是一个线程的两层组织结构
+    * 这是一个grid和block均是2-dim的线程组织。
+    ![](./images/2019-12-09-15-21-52.png)
+
+* grid和block都是定义为dim3类型变量，dim3可以看成包含三个无符号整数（x，y，z）  成员结构体，在定义时缺省是1
+
+* kernel在调用时也必须通过执行配置<<<grid, block>>>来指定kernel所使用的线程数及结构。
+```
+dim3 grid(3, 2);
+dim3 block(5, 3);
+kernel_fun<<< grid, block >>>(prams...);
+```
+
+## 2.4 流式处理器（SM）
+* 一个线程块上的线程是放在同一个流式多处理器（SM)上的，但是单个SM的资源有限，这导致线程块中的线程数是有限制的，现代GPUs的线程块可支持的线程数可达1024个。
+
+* 有时候，我们要知道一个线程在blcok中的全局ID，此时就必须还要知道block的组织结构，这是通过线程的内置变量blockDim来获得。它获取线程块各个维度的大小。
+    * 对于一个2-dim的block （Dx，Dy），线程 （x，y）的ID值为 （x+y*Dx）
+* 另外线程还有内置变量gridDim，用于获得网格块各个维度的大小。
+
+kernel的这种线程组织结构天然适合vector,matrix等运算，如我们将利用上图2-dim结构实现两个矩阵的加法，每个线程负责处理每个位置的两个元素相加，代码如下所示。线程块大小为(16, 16)，然后将N*N大小的矩阵均分为不同的线程块来执行加法运算。
